--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-architect
 title: Astro Citizen Science
-description: Created by Sabrina Leroe
+description: a technical writing project by Sabrina Leroe
 
 github:
   is_project_page: false
